[gd_scene load_steps=2 format=3 uid="uid://bag7qdcck7qe3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_8j11j"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8j11j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -50.5
offset_right = 49.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Character Select" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Character"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play
"

[node name="Quit Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game?"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Character Select" to="." method="_on_character_select_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
